Join a row with what happened where it is written
What became of reading a row is a fact about the source it is written in, and it
was being read after the sources were gathered under a behavior's name. A
behavior exampled in its own module and in an attached file leaves two readings
under one name, and a row of one of them then took whichever reason was recorded
first — a reader told about a file the row is not in. So a source's rows and what
became of reading that source are put together while both are still that
source's.

A row with no outcome and no reason is not a state to describe. A reading is
short of a row only for a reason it recorded, so meeting one with neither is this
reading's own invariant broken; answering it with a reason of our own would put
the row back among the ones nothing says anything about, which is where it was
before any of this.

And a row that was read and stopped before its values is not a row nothing read.
The first has an evaluation that says how far it got, and a word for it beside
that says less than the stage already does; the second has none, and has to say
why nothing read it. They were one arm and are two.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>